--- a/LisaaOpiskelijaForm.html
+++ b/LisaaOpiskelijaForm.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div>TODO write content</div>
+    <div>TO-DO write content</div>
 
     <form action="dbInsertOpiskelija.php" method="POST">
         Etunimi: <input type="text" name="etun"><br>
